--- a/package.json
+++ b/package.json
@@ -6,11 +6,22 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "config-lite": "^2.1.0",
+    "connect-flash": "^0.1.1",
+    "connect-mongo": "^2.0.3",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
-    "ejs": "~2.5.7",
-    "express": "~4.16.0",
+    "ejs": "^2.5.9",
+    "express": "^4.16.4",
+    "express-session": "^1.15.6",
+    "express-winston": "^3.1.0",
     "http-errors": "~1.6.2",
-    "morgan": "~1.9.0"
+    "marked": "^0.6.1",
+    "moment": "^2.24.0",
+    "mongolass": "^4.4.2",
+    "morgan": "~1.9.0",
+    "objectid-to-timestamp": "^1.3.0",
+    "sha1": "^1.1.1",
+    "winston": "^3.2.1"
   }
 }
