--- a/package.json
+++ b/package.json
@@ -11,8 +11,9 @@
     "connect-mongo": "^2.0.3",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
-    "ejs": "^2.5.9",
+    "ejs": "^2.6.1",
     "express": "^4.16.4",
+    "express-formidable": "^1.2.0",
     "express-session": "^1.15.6",
     "express-winston": "^3.1.0",
     "http-errors": "~1.6.2",
