--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "test": "istanbul cover node_modules/mocha/bin/_mocha"
   },
   "dependencies": {
     "config-lite": "^2.1.0",
@@ -24,5 +25,10 @@
     "objectid-to-timestamp": "^1.3.0",
     "sha1": "^1.1.1",
     "winston": "^3.2.1"
+  },
+  "devDependencies": {
+    "istanbul": "^0.4.5",
+    "mocha": "^6.0.1",
+    "supertest": "^3.4.2"
   }
 }
