--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "cross-env": "^5.2.0",
     "istanbul": "^0.4.5",
     "mocha": "^6.0.1",
-    "supertest": "^3.4.2"
+    "supertest": "^3.4.2",
+    "ws": "3.3.2"
   }
 }
